- changed redirect handling on Post. The library will follow redirects on Post automatically by default, to accomodate Blogger (which
  currently may return 302s on posts). This can be turned off by setting the .StrictRedirect property to true on the 
  GDataAuthRequestFactory. If it is turned off, the code will throw if a redirect is happening on an HTTP verb other than GET.
- removed cookie handling. The code will handle cookies now without using the CookieContainer (one hurdle on the way to the CompactFramework Port).
- Fixed persistence of "initialized" date values for udpated/published on the atom.entry. This resolves an issue with the Blogger. 
- Added EventEntry.Notifications. This property (boolean) indicates if an update on an entry should send notifications to the attendees of the 
  Event. 
- Fixed the gbase project (the NumberFormat.cs file was missing in the project file). 
- Added a proxy property for the GDataRequestFactory. 

== 1.0.7 ==
- Added support for published-min/published-max as standard query parameters
- Added support for codesearch. A new DLL gcodesearch.dll and a new sample for this is available.
- Added support for the WebContent calendar extension
- Added signing to the gbase.dll

== 1.0.6 == 
- Added support for sortoder, futurevents, singleevents on the calendarquery
- Added a ResponseString property on the GDataRequestException to make debugging server side errors easier
- Fixed an issue with the GoogleBaseService, if you did set the RequestFactory property twice, you would 
  create too many header entries, and hence end up with request denied responses
- Added the shipping attribute for GoogleBase
- Changed the payment attribute to payment_accepted for GoogleBase

== 1.0.5 ==
- Added batch support for GoogleFeeds, the first property to support this is the GoogleBase product
- Added a unittest for GoogleBase. This code shows update/insert/delete against base for single entries and batch entries